Library/AXL(Library)/C, C++/AXDev.h

//========== Profile commands of standard I/O =========================================================================
// The API for return of data setting value for each synchronous I/O slave device.
DWORD   __stdcall AxlM3GetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// The API for setting data value for each synchronous I/O slave device.
DWORD   __stdcall AxlM3SetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// The API for return of data setting value for each asynchronous I/O slave device.
DWORD   __stdcall AxlM3GetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// The API for setting data value for each asynchronous I/O slave device.
DWORD   __stdcall AxlM3SetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// Set the MLIII adjustment operation
// dwReqCode == 0x1005 : parameter initialization : 20sec
// dwReqCode == 0x1008 : absolute encoder reset   : 5sec
// dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
// dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
DWORD   __stdcall AxmM3AdjustmentOperation(long lAxisNo, DWORD dwReqCode);
// API for diagnosing home search progress.(Only for M3)
DWORD    __stdcall AxmHomeGetM3FWRealRate(long lAxisNo, DWORD *upHomeMainStepNumber, DWORD *upHomeSubStepNumber, DWORD *upHomeLastMainStepNumber, DWORD *upHomeLastSubStepNumber);
// Return adjusted position value when escaping sensor zone from origin search.(Only for M3)
DWORD   __stdcall AxmHomeGetM3OffsetAvoideSenArea(long lAxisNo, double *dPos);
// The API for Setting adjusted position value when escaping sensor zone from origin search.(Only for M3)
// If dPos setting value is '0', adjusted position value will be set automatically when automatically escaping.
// 'dPos' should be a positive number.
DWORD   __stdcall AxmHomeSetM3OffsetAvoideSenArea(long lAxisNo, double dPos);
// Setting usage criterion of absolute encoder. Set whether to CMD/ACT POS initialize after origin search.(Only for M3)
// dwSel: 0, CMD/ACTPOS will be set '0' after origin search.(Default)
// dwSel: 1, CMD/ACTPOS will be not set after origin search.
DWORD   __stdcall AxmM3SetAbsEncOrgResetDisable(long lAxisNo, DWORD dwSel);
// Get 'AxmM3SetAbsEncOrgResetDisable' setting value.(Only for M3)
// upSel: 0, CMD / ACTPOS set to 0 after home search. (Default)
// upSel: 1, CMD / ACTPOS value is not set after home search.
DWORD   __stdcall AxmM3GetAbsEncOrgResetDisable(long lAxisNo, DWORD *upSel);
// Setting whether using alarm maintenance function when switch to slave offline mode.(Only for M3)
// dwSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// dwSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
DWORD   __stdcall AxmM3SetOfflineAlarmEnable(long lAxisNo, DWORD dwSel);
// Get 'AxmM3SetOfflineAlarmEnable' setting value.(Only for M3)
// upSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// upSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
DWORD   __stdcall AxmM3GetOfflineAlarmEnable(long lAxisNo, DWORD *upSel);
// Read value of slave online or offline status. (Only for M3)
// upSel: 0, ONLINE->OFFLINE Not converted
// upSel: 1, ONLINE->OFFLINE converted
DWORD   __stdcall AxmM3ReadOnlineToOfflineStatus(long lAxisNo, DWORD *upStatus);
DWORD   __stdcall AxlSetLockMode(long lBoardNo, WORD wLockMode);
DWORD   __stdcall AxlSetLockData(long lBoardNo, DWORD dwTotalNodeNum, DWORD *dwpNodeNo, DWORD *dwpNodeID, DWORD *dwpLockData);
DWORD   __stdcall AxmMoveStartPosWithAVC(long lAxisNo, double dPosition, double dMaxVelocity, double dMaxAccel, double dMinJerk, double *dpMoveVelocity, double *dpMoveAccel, double *dpMoveJerk);
//======== API for EtherCAT only =============================================================================
// The API for read VendorID, ProductCode and RevisionNo of EtherCat slave product by using StationAddress.
DWORD  __stdcall AxlECatGetProductInfo(DWORD dwStationAddress, DWORD* pdwVendorID, DWORD* pdwProductCode, DWORD* pdwRevisionNo);
DWORD  __stdcall AxlECatGetProductInfoEx(long lBoardNo, DWORD dwStationAddress, DWORD* pdwVendorID, DWORD* pdwProductCode, DWORD* pdwRevisionNo);
// The API for verifying network status of EtherCAT slave product by using StationAddress.
DWORD  __stdcall AxlECatGetModuleStatus(DWORD dwStationAddress);
// Read input PDO(Process Data Objects)
// dwBitOffset     : ProcessImage inputs bit offset value.
// dwDataBitLength : bit size of input pdo data.
// pbyData         : The Buffer for inserting read data.
DWORD  __stdcall AxlECatReadPdoInput(DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
DWORD  __stdcall AxlECatReadPdoInputEx(long lBoardNo, DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Read output PDO(Process Data Objects)
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of input pdo data.(for read)
// pbyData         : The Buffer for inserting read data.
DWORD  __stdcall AxlECatReadPdoOutput(DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
DWORD  __stdcall AxlECatReadPdoOutputEx(long lBoardNo, DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Write value to output process data.
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of output pdo data.(for write)
// pbyData         : The Buffer for inserting write data.
DWORD  __stdcall AxlECatWritePdoOutput(DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Read SDO(Service Data Objects) by using COE.
DWORD  __stdcall AxlECatReadSdo(DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength, DWORD *pdwReadDataLength);
DWORD  __stdcall AxlECatReadSdoEx(long lBoardNo, DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength, DWORD *pdwReadDataLength);
// Store values in SDO by using COE.
DWORD  __stdcall AxlECatWriteSdo(DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength);
DWORD  __stdcall AxlECatWriteSdoEx(long lBoardNo, DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength);
DWORD  __stdcall AxlECatReadSdoFromAxisDouble(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, double* pdData);
DWORD  __stdcall AxlECatWriteSdoFromAxisDouble(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, double* pdData);
// Read SDO(DWORD type) through the axis number.
DWORD  __stdcall AxlECatReadSdoFromAxisDword(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, DWORD* pdwData);
// Store values in SDO(DWORD type) through the axis number.
DWORD  __stdcall AxlECatWriteSdoFromAxisDword(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, DWORD* pdwData);
// Read SDO(WORD type) through the axis number.
DWORD  __stdcall AxlECatReadSdoFromAxisWord(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, WORD* pwData);
// Store values in SDO(WORD type) through the axis number.
DWORD  __stdcall AxlECatWriteSdoFromAxisWord(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, WORD* pwData);
// Read SDO(BYTE type) through the axis number.
DWORD  __stdcall AxlECatReadSdoFromAxisByte(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData);
// Store values in SDO(BYTE type) through the axis number.
DWORD  __stdcall AxlECatWriteSdoFromAxisByte(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData);
// Read value of EEPROM.
DWORD  __stdcall AxlECatReadEEPRom(DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
// Write value to EEPROM.
DWORD  __stdcall AxlECatWriteEEPRom(DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
DWORD  __stdcall AxlECatReadEEPRomEx(long lBoardNo, DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
DWORD  __stdcall AxlECatWriteEEPRomEx(long lBoardNo, DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
// Read value of a register.
//DWORD  __stdcall AxlECatReadRegister(DWORD dwStationAddress, WORD wRegisterOffset, VOID *pvData, WORD wLen);

// Write value of a register.
//DWORD  __stdcall AxlECatWriteRegister(DWORD dwStationAddress, WORD wRegisterOffset, VOID *pvData, WORD wLen);

// Save BackupData as a file from among the object dictionary of EtherCat slave.
DWORD  __stdcall AxlECatSaveHotSwapData(DWORD dwStationAddress);
// Load BackupData which saved as a file from corresponding EtherCat salve.
DWORD  __stdcall AxlECatLoadHotSwapData(DWORD dwStationAddress);