Library/AXL(Library)/Visual Basic(Net)/AXDev.vb


'========== Profile commands of standard I/O =========================================================================
' The API for return of data setting value for each synchronous I/O slave device.
Public Declare Function AxlM3GetStationRWS Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer
' The API for setting data value for each synchronous I/O slave device.
Public Declare Function AxlM3SetStationRWS Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer
' The API for return of data setting value for each asynchronous I/O slave device.
Public Declare Function AxlM3GetStationRWA Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer
' The API for setting data value for each asynchronous I/O slave device.
Public Declare Function AxlM3SetStationRWA Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModuleNo As Integer, ByVal bModuleType As Byte, ByRef pdwParam As Integer, ByVal bSize As Byte) As Integer


' Set the MLIII adjustment operation
' dwReqCode == 0x1005 : parameter initialization : 20sec
' dwReqCode == 0x1008 : absolute encoder reset   : 5sec
' dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
' dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
Public Declare Function AxmM3AdjustmentOperation Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwReqCode As Integer) As Integer


' API for diagnosing home search progress.(Only for M3)
Public Declare Function AxmHomeGetM3FWRealRate Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upHomeMainStepNumber As Integer, ByRef upHomeSubStepNumber As Integer, ByRef upHomeLastMainStepNumber As Integer, ByRef upHomeLastSubStepNumber As Integer) As Integer
' Return adjusted position value when escaping sensor zone from origin search.(Only for M3)
Public Declare Function AxmHomeGetM3OffsetAvoideSenArea Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dPos As Double) As Integer
' The API for Setting adjusted position value when escaping sensor zone from origin search.(Only for M3)
' If dPos setting value is '0', adjusted position value will be set automatically when automatically escaping.
' 'dPos' should be a positive number.
Public Declare Function AxmHomeSetM3OffsetAvoideSenArea Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer


' Setting usage criterion of absolute encoder. Set whether to CMD/ACT POS initialize after origin search.(Only for M3)
' dwSel: 0, CMD/ACTPOS will be set '0' after origin search.(Default)
' dwSel: 1, CMD/ACTPOS will be not set after origin search.
Public Declare Function AxmM3SetAbsEncOrgResetDisable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwSel As Integer) As Integer

' Get 'AxmM3SetAbsEncOrgResetDisable' setting value.(Only for M3)
' upSel: 0, CMD / ACTPOS set to 0 after home search. (Default)
' upSel: 1, CMD / ACTPOS value is not set after home search.
Public Declare Function AxmM3GetAbsEncOrgResetDisable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upSel As Integer) As Integer


' Setting whether using alarm maintenance function when switch to slave offline mode.(Only for M3)
' dwSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
' dwSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
Public Declare Function AxmM3SetOfflineAlarmEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwSel As Integer) As Integer

' Get 'AxmM3SetOfflineAlarmEnable' setting value.(Only for M3)
' upSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
' upSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
Public Declare Function AxmM3GetOfflineAlarmEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upSel As Integer) As Integer

' Read value of slave online or offline status. (Only for M3)
' upSel: 0, ONLINE->OFFLINE Not converted
' upSel: 1, ONLINE->OFFLINE converted
Public Declare Function AxmM3ReadOnlineToOfflineStatus Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer

    Public Declare Function AxlSetLockMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wLockMode As Integer) As Integer
    Public Declare Function AxlSetLockData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwTotalNodeNum As Integer, ByRef dwpNodeNo As Integer, ByRef dwpNodeID As Integer, ByRef dwpLockData As Integer) As Integer
    Public Declare Function AxmMoveStartPosWithAVC Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPosition As Double, ByVal dMaxVelocity As Double, ByVal dMaxAccel As Double, ByVal dMinJerk As Double, ByRef dpMoveVelocity As Double, ByRef dpMoveAccel As Double, ByRef dpMoveJerk As Double) As Integer

'======== API for EtherCAT only =============================================================================
' The API for read VendorID, ProductCode and RevisionNo of EtherCat slave product by using StationAddress.
Public Declare Function AxlECatGetProductInfo Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByRef pdwVendorID As Integer, ByRef pdwProductCode As Integer, ByRef pdwRevisionNo As Integer) As Integer
    Public Declare Function AxlECatGetProductInfoEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwStationAddress As Integer, ByRef pdwVendorID As Integer, ByRef pdwProductCode As Integer, ByRef pdwRevisionNo As Integer) As Integer

' The API for verifying network status of EtherCAT slave product by using StationAddress.
Public Declare Function AxlECatGetModuleStatus Lib "AXL.dll" (ByVal dwStationAddress As Integer) As Integer


' Read input PDO(Process Data Objects)
' dwBitOffset     : ProcessImage inputs bit offset value.
' dwDataBitLength : bit size of input pdo data.
' pbyData         : The Buffer for inserting read data.
Public Declare Function AxlECatReadPdoInput Lib "AXL.dll" (ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer
    Public Declare Function AxlECatReadPdoInputEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer


' Read output PDO(Process Data Objects)
' dwBitOffset     : ProcessImage outputs bit offset value.
' dwDataBitLength : bit size of input pdo data.(for read)
' pbyData         : The Buffer for inserting read data.
Public Declare Function AxlECatReadPdoOutput Lib "AXL.dll" (ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer
    Public Declare Function AxlECatReadPdoOutputEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer

' Write value to output process data.
' dwBitOffset     : ProcessImage outputs bit offset value.
' dwDataBitLength : bit size of output pdo data.(for write)
' pbyData         : The Buffer for inserting write data.
Public Declare Function AxlECatWritePdoOutput Lib "AXL.dll" (ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer


' Read SDO(Service Data Objects) by using COE.
Public Declare Function AxlECatReadSdo Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Integer, ByRef pdwReadDataLength As Integer) As Integer
    Public Declare Function AxlECatReadSdoEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwStationAddress As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Integer, ByRef pdwReadDataLength As Integer) As Integer

' Store values in SDO by using COE.
Public Declare Function AxlECatWriteSdo Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Integer) As Integer
    Public Declare Function AxlECatWriteSdoEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwStationAddress As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Integer) As Integer

    Public Declare Function AxlECatReadSdoFromAxisDouble Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pdData As Double) As Integer

    Public Declare Function AxlECatWriteSdoFromAxisDouble Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pdData As Double) As Integer
' Read SDO(DWORD type) through the axis number.
Public Declare Function AxlECatReadSdoFromAxisDword Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pdwData As Integer) As Integer

' Store values in SDO(DWORD type) through the axis number.
Public Declare Function AxlECatWriteSdoFromAxisDword Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pdwData As Integer) As Integer

' Read SDO(WORD type) through the axis number.
Public Declare Function AxlECatReadSdoFromAxisWord Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pwData As Integer) As Integer

' Store values in SDO(WORD type) through the axis number.
Public Declare Function AxlECatWriteSdoFromAxisWord Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pwData As Integer) As Integer

' Read SDO(BYTE type) through the axis number.
Public Declare Function AxlECatReadSdoFromAxisByte Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte) As Integer

' Store values in SDO(BYTE type) through the axis number.
Public Declare Function AxlECatWriteSdoFromAxisByte Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte) As Integer

' Read value of EEPROM.
Public Declare Function AxlECatReadEEPRom Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByVal wEEPRomStartOffset As Integer, ByRef pwData As Integer, ByVal dwDataLength As Integer) As Integer

' Write value to EEPROM.
Public Declare Function AxlECatWriteEEPRom Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByVal wEEPRomStartOffset As Integer, ByRef pwData As Integer, ByVal dwDataLength As Integer) As Integer
    Public Declare Function AxlECatReadEEPRomEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwStationAddress As Integer, ByVal wEEPRomStartOffset As Integer, ByRef pwData As Integer, ByVal dwDataLength As Integer) As Integer

    Public Declare Function AxlECatWriteEEPRomEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwStationAddress As Integer, ByVal wEEPRomStartOffset As Integer, ByRef pwData As Integer, ByVal dwDataLength As Integer) As Integer

' Read value of a register.
Public Declare Function AxlECatReadRegister Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByVal wRegisterOffset As Integer, ByRef pvData As Object, ByVal wLen As Integer) As Integer

' Write value of a register.
Public Declare Function AxlECatWriteRegister Lib "AXL.dll" (ByVal dwStationAddress As Integer, ByVal wRegisterOffset As Integer, ByRef pvData As Object, ByVal wLen As Integer) As Integer

' Save BackupData as a file from among the object dictionary of EtherCat slave.
Public Declare Function AxlECatSaveHotSwapData Lib "AXL.dll" (ByVal dwStationAddress As Integer) As Integer

' Load BackupData which saved as a file from corresponding EtherCat salve.
Public Declare Function AxlECatLoadHotSwapData Lib "AXL.dll" (ByVal dwStationAddress As Integer) As Integer
